# 2d_physics

./: .gitignore  Cargo.toml  Makefile
includes/: events.h  fdf.h  key_codes_macos.h
libft/: Makefile  ft_strlen.c
libft/includes/: get_next_line.h  libft.h
src/: main.rs  object.rs  universe.rs
srcs/: colors.c  ft_claim_frame.c  ft_create_mem_block.c  ft_draw_line.c  ft_draw_lines.c  ft_get_color_interpolation.c  ft_get_image_frames.c  ft_get_lerp.c  ft_get_perspective_angle.c  ft_get_reduction_coefficient.c  ft_get_z_coord.c  ft_handler_a.c  ft_handler_alpha.c  ft_handler_d.c  ft_handler_down.c  ft_handler_e.c  ft_handler_esc.c  ft_handler_keys.c  ft_handler_left.c  ft_handler_mouse.c  ft_handler_mouse_motion.c  ft_handler_pad_down.c  ft_handler_pad_up.c  ft_handler_q.c  ft_handler_right.c  ft_handler_s.c  ft_handler_symetry.c  ft_handler_up.c  ft_handler_w.c  ft_line_clipping.c  ft_mem_block_push_back_elem.c  ft_parse_color.c  ft_parse_file.c  ft_pthread_create_lines_drawing_threads.c  ft_pthread_frame_clear_routine.c  ft_pthread_lines_drawing_routine.c  ft_pthread_wait_drawing_threads.c  ft_set_3d.c  ft_set_lines.c  ft_set_mlx_hooks.c  (+3 more)
srcs/quaternions/: ft_get_conjugate_quat.c  ft_get_quat_magnitude.c  ft_multiply_quat.c  ft_normalize_quat.c  ft_quat_rotate_points.c
